# x7k9m2p4

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTO_DEV_LOG.md  Dockerfile  PROJECT_SUMMARY.md  README.md  agent_tools.go  api_credentials.go  api_files.go  api_groupchat.go  api_inbox.go  api_misc.go  api_models.go  app.go  blueprint.go  blueprint_api.go  blueprint_engine.go  blueprint_store.go  chat_store.go  cmd_other.go  cmd_windows.go  docker-compose.yml  go.mod  go.sum  hermes-standalone.spec  hermes_bridge.py  index.html  main.go  package-lock.json  package.json  resource_windows_amd64.syso  tsconfig.json  vite.config.ts  wails.json
.github/workflows/: release.yml
agent/: server.py
agent-go/: go.mod  go.sum  hixns-agent.manifest  main.go  resource.rc  resource_windows_amd64.syso  window_other.go  window_windows.go
docs/: DEVELOPMENT.md  hiveward-manager-slot-group-analysis.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  router.ts
frontend/src/api/: index.ts
frontend/src/components/: TitleBar.vue  (+4 more)
scripts/: build-full-installer.sh  build-local.sh  build.sh  bundle-hermes.sh  installer.iss  installer.nsi  run.sh  sync-version.sh
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/hermes-agent/hermes_cli/: desktop_server.py
src-tauri/src/: agent_bridge.rs  commands.rs  config.rs  gfw_client.rs  gfw_types.rs  lib.rs  main.rs  skill_store.rs
src/api/: index.ts  websocket.ts
src/components/: SplashScreen.vue  TitleBar.vue
src/stores/: app.ts  chat.ts  gfw.ts
src/types/: index.ts
src/views/: ChatView.vue  SettingsView.vue  SkillStoreView.vue  TasksView.vue
(+101 files in other folders)
