[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Desktop AI Agent"
authors = ["Hermes Team"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = ["shell-open", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "s"
