[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Desktop AI Agent"
authors = ["Hermes Team"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
once_cell = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "s"
